# cmbagent

./: .dockerignore  .gitattributes  .gitignore  ARXIV_FILTER_MODE.md  CLAUDE.md  CMBAGENT_GUI.py  CMBAGENT_GUI_backup.py  CMBAGENT_GUI_backup2.py  CMBAGENT_UI_README.md  CMBCHAT_CREATED.md  Dockerfile  Dockerfile.nextjs  LICENSE  MANIFEST.in  MCP_AGENT_PROPOSAL.md  MCP_IMPLEMENTATION_PHASE1.md  README.md  REMOTE_EXECUTION_MVP_PLAN.md  RENAMING_SUMMARY.md  STRUCTURED_OUTPUT_ANALYSIS.md  STRUCTURED_OUTPUT_CLEANUP.md  SUMMARIZATION_COMPARISON.md  SUMMARIZATION_RESTORATION.md  TEST_RESULTS.md  TROUBLESHOOTING_FETCH_ERRORS.md  docker-compose.yml  installer.sh  package-lock.json  pypi_upload.sh  pyproject.toml  requirements.txt  setup.py  start-cmbagent.sh  start_cmbagent_ui.sh  test_one_shot.ipynb  test_one_shot.py
.github/workflows/: python-package.yml  python-publish.yml  tests.yml
backend/: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  auth.py  credentials.py  docker-compose.yml  execution_tracker.py  main.py  models.py  requirements.txt  run.py  test_backend.py
backend/credentials/: .gitkeep
cmbagent/: __init__.py  aas_kwd_to_url.pkl  arxiv_downloader.py  base_agent.py  cli.py  cmb_swarm_agent.py  cmbagent.py  cmbagent_swarm_agent.py  context.py  data_retriever.py  functions.py  hand_offs.py  keywords_utils.py  literature.py  ocr.py  output.py  rag_utils.py  structured_output.py  utils.py  version.py  vlm_injections.py  vlm_utils.py
cmbagent-ui/: .env.local.example  dev-with-browser.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
cmbagent-ui/app/: globals.css  layout.tsx  page.tsx
cmbagent-ui/components/: ConsoleOutput.tsx  CredentialsKeyIcon.tsx  CredentialsModal.tsx  CredentialsStatus.tsx  FileBrowser.tsx  Header.tsx  ModelSelector.tsx  ResultDisplay.tsx  TaskInput.tsx  UserMenu.tsx
cmbagent-ui/contexts/: AuthContext.tsx
cmbagent-ui/hooks/: useCredentials.ts  useWebSocket.ts
cmbagent-ui/lib/: codeExecutor.ts  executionStore.ts  firebase.ts
cmbagent/admin/: admin.py  admin.yaml
cmbagent/apis/: deepseek_reasoner.json  oai_gpt3.5turbo.json  oai_gpt4o.json
cmbagent/assistants/: act.py  act.yaml  base_agent.py  camb.py  camb.yaml  camels.py  camels.yaml  classy.py  classy.yaml  classy_sz.py  classy_sz.yaml  cobaya.py  cobaya.yaml  getdist.py  getdist.yaml  memory.yaml  planck.py  planck.yaml
cmbagent/engineer/: engineer.py  engineer.yaml
cmbagent/execution/: __init__.py  remote_executor.py
cmbagent/executor/: executor.py  executor.yaml
cmbagent/functions/: __init__.py  execution_control.py  ideas.py  keywords.py  planning.py  registration.py  status.py  utils.py
cmbagent/gui/: .gitignore  README.md  backend_server.py  gui.py  next.config.js  package-lock.json  package.json  tailwind.config.js
cmbagent/planner/: planner.py  planner.yaml
cmbagent/rag_software_formatter/: rag_software_formatter.py  rag_software_formatter.yaml
cmbagent/summarizer/: summarizer.yaml
cmbagent/utils/: __init__.py  context_utils.py  data_retriever.py  keywords_utils.py  literature.py  rag_utils.py  structured_output.py  summarization.py  utils.py  vlm_injections.py  yaml.py
cmbagent/workflows/: __init__.py  control.py  deep_research.py  human_in_the_loop.py  keywords.py  one_shot.py  planning_and_control.py
cmbagent_mcp/: README.md  __init__.py  config.py  server.py  test_one_shot_call.py  test_server.py
cmbagent_mcp/tools/: __init__.py  one_shot.py
docs/: FIREBASE_SETUP.md  README.md  conf.py  index.rst  requirements.txt
docs/notebooks/: 1_getting_started.ipynb  2_stat_class.ipynb  3_two_agents_chat.ipynb  4_your_rag.ipynb  5_memory_agent.ipynb  astropilot-keyword_search.ipynb  astropilot.ipynb  astropilot_lit_search.ipynb  astropilot_prompt_test.ipynb  cmbagent-towards-robust-and-nice.ipynb  cmbagent.ipynb  cmbagent_beta2_demo.ipynb  cmbagent_beta2_demo_anharmonic_oscillator.ipynb  cmbagent_beta2_demo_cmbcls.ipynb  cmbagent_beta2_demo_cmbcls_deepseek.ipynb  cmbagent_beta2_demo_economics.ipynb  cmbagent_beta2_demo_economics_gpt45.ipynb  cmbagent_beta2_demo_education.ipynb  cmbagent_beta2_demo_energygrid.ipynb  (+40 more)
evals/: cmbagent_beta3_evals.ipynb  evals_1value.py  evals_array_csv.py  evals_dummy.py  evals_one_shot_rag.py
history/: anon_one_shot_Plot_the_matter_power_spectrum_Pk_from_k_chat_history.json  anon_one_shot_Plot_y_sin_x_chat_history.json  anon_one_shot_Plot_y_x_2_chat_history.json  anon_one_shot_Plot_y_x_chat_history.json  anon_one_shot_What_is_CMBAgent_chat_history.json  anon_one_shot_What_is_CMB_chat_history.json  anon_one_shot_What_is_CMB_chat_history_2.json  anon_one_shot_What_is_the_Black_Scholes_option_pricing_chat_history.json  anon_planning_and_control_Can_you_code_a_cobaya_theory_likelihood__chat_history.json  anon_planning_and_control_Download_the_ACT_DR6_lensing_map_via_wge_chat_history.json  anon_planning_and_control_download_stock_prices_of_tech_bigs_of_US_chat_history.json
massgen_configs/: INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  engineer_massgen.yaml
notebooks/: 1_getting_started.ipynb  cmbagent.ipynb
output/: notes.md
plans/: idea_plan.json
tests/: test_astropilot.py  test_camb_agent.py  test_camb_agent_gemini.py  test_cmbagent.py  test_cobaya_agent.py  test_deep_research.py  test_deep_research_massgen.py  test_deep_research_reuse.py  test_engineer.py  test_engineer_make_plot.py  test_engineer_missing_datafile.py  test_engineer_planning_and_control.py  test_engineer_run_codebase.py  test_hitl.py  test_idea_maker.py  test_idea_maker_short.py  test_ideas.py  test_keywords.py  test_methodology.py  test_one_shot.py  test_one_shot_engineer.py  test_one_shot_engineer_massgen.py  test_one_shot_researcher.py  test_perplexity_agent.py  test_perplexity_agent_idea_scoring.py  test_plan_setter_planner.py  test_query.py  test_researcher.py  test_researcher_engineer_3steps.py  test_researcher_engineer_3steps_with_error.py  test_researcher_engineer_5steps.py  test_researcher_planning_and_control.py  test_smartphones.py  test_triage.py  test_various_plans.py
(+303 files in other folders)
