[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=0.29.21",
    "setuptools_scm"
]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.1post64"
name = "cmbagent"
maintainers = [{name = "CMBAgents", email = "boris.bolliet@cmbagent.community"}]
description = "multi-agent system for autonomous discovery, made by cosmologists, powered by ag2"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"  # Specify the Python version requirement here
license = "Apache-2.0"

dependencies = [
    "pip",
    "anthropic",
    "mistralai",
    "ruamel.yaml",
    "cmbagent_autogen>=0.0.91post11",
    # "google-cloud-aiplatform==1.91.0",
    "jsonref==1.1.0",
    "cobaya",                   # to use yaml_load_file function    # TODO: maybe replace if only yaml_load_file is needed
    "pandas >=2.2",

    "streamlit",
    "ipython",                  # needed for streamlit
    
    # FastAPI backend dependencies
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.7.4",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
# Jupyter notebook dependencies
jupyter = [
    "jupyterlab",
    "jupyter-kernel-gateway",
    "jupyter-client>=8.6.0",
    "ipykernel>=6.29.0",
]
# Astronomy/astrophysics dependencies
astro = [
    "camb >= 1.6.0",
    "astropy >=6.0",            # core astronomy library
    "healpy >=1.16",            # HEALPix maps (CMB, large-scale structure)
    "emcee >=3.1",
]
# Data science, statistics and visualization dependencies
data = [
    "scipy >=1.12",
    "xarray >=2024.3",
    "h5py >=3.10",
    "scikit-learn >=1.4",
    "statsmodels >=0.14",
    "linearmodels >=5.1",
    # Plotting and visualization
    "matplotlib >=3.8",
    "seaborn >=0.13",
    "plotly >=5.21",
    # Machine Learning & Deep Learning
    "xgboost >=2.0",
    #"lightgbm >=4.3",
    #"catboost >=1.2",
    #"tensorflow",    # or comment out if not using DL
    #"torch >=2.2",          # optional: PyTorch for DL
    #"keras >=3.3",          # optional: Keras with TensorFlow backend
    # Financial and economic data
    "yfinance >=0.2",
    #"pandas-datareader >=0.10",
    #"quandl >=3.7",
    # Data formats and storage
    #"openpyxl >=3.1",
    #"pyarrow >=15.0",
    # Performance and scaling
    #"numba >=0.59",
    #"dask >=2024.4",
    #"joblib >=1.4",  # for parallel ML workloads
]

nextjs = [
    # Note: The Next.js interface requires installation from source
    # pip install does not include the Next.js frontend files
    # Use: git clone + pip install -e . for Next.js support
]

[tool.setuptools.package-data]
cmbagent = [
  "cmbagent/apis/*.json",
  "cmbagent/assistants/*.yaml",
  "cmbagent/planner/*.yaml",
  "cmbagent/engineer/*.yaml",
  "cmbagent/executor/*.yaml",
  "cmbagent/admin/*.yaml",
  "logo.png"
]

[project.urls]
Homepage = "https://github.com/CMBAgents/cmbagent"
GitHub = "https://github.com/CMBAgents/cmbagent"

#[tool.setuptools_scm]
#write_to = "cmbagent/version.py"

[tool.setuptools.packages.find]
exclude = ["output"]

[project.scripts]
cmbagent = "cmbagent.cli:main"