[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=0.29.21",
    "setuptools_scm"
]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.1post64"
name = "cmbagent"
maintainers = [{name = "CMBAgents", email = "boris.bolliet@cmbagent.community"}]
description = "multi-agent system for autonomous discovery, made by cosmologists, powered by ag2"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"  # Specify the Python version requirement here
license = "Apache-2.0"

dependencies = [
    "pip",
    "anthropic",
    "mistralai",
    "ruamel.yaml",
    "cmbagent_autogen>=0.0.91post11",
    "jsonref==1.1.0",
    "pandas >=2.2",
    "ipython",
    
    # FastAPI backend dependencies
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.7.4",
    "aiohttp>=3.9.0",
    "matplotlib",
    "pytest",
    "jupyterlab",
    "ipykernel>=6.29.0",
]

[project.optional-dependencies]
# Jupyter notebook dependencies
jupyter = [
    "jupyter-kernel-gateway",
    "jupyter-client>=8.6.0",
]
# Astronomy/astrophysics dependencies
astro = [
    "camb >= 1.6.0",
    "astropy >=6.0",            # core astronomy library
    "healpy >=1.16",            # HEALPix maps (CMB, large-scale structure)
    "emcee >=3.1",
    "cobaya",
]

# Data science, statistics and visualization dependencies
data = [
    "scipy >=1.12",
    "xarray >=2024.3",
    "h5py >=3.10",
    "scikit-learn >=1.4",
    "statsmodels >=0.14",
    "linearmodels >=5.1",
    "matplotlib >=3.8",
    "seaborn >=0.13",
    "plotly >=5.21",
    "xgboost >=2.0",
    "yfinance >=0.2",
]

nextjs = [
    # Note: The Next.js interface requires installation from source
    # pip install does not include the Next.js frontend files
    # Use: git clone + pip install -e . for Next.js support
]

[tool.setuptools.package-data]
cmbagent = [
  "cmbagent/apis/*.json",
  "cmbagent/assistants/*.yaml",
  "cmbagent/planner/*.yaml",
  "cmbagent/engineer/*.yaml",
  "cmbagent/executor/*.yaml",
  "cmbagent/admin/*.yaml",
  "logo.png"
]

[project.urls]
Homepage = "https://github.com/CMBAgents/cmbagent"
GitHub = "https://github.com/CMBAgents/cmbagent"


[tool.setuptools.packages.find]
exclude = ["output"]

[project.scripts]
cmbagent = "cmbagent.cli:main"


[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["legacy", ".ipynb_checkpoints"]